--- a/cx-domain/pom.xml
+++ b/cx-domain/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>cx</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <groupId>cx-domain</groupId>
+  <groupId>cx</groupId>
   <artifactId>cx-domain</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>cx-domain</name>
