--- a/cx-service/pom.xml
+++ b/cx-service/pom.xml
@@ -14,8 +14,16 @@
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <spring.version>4.3.0.RELEASE</spring.version>
+    <cx.version>0.0.1-SNAPSHOT</cx.version>
   </properties>
   <dependencies>
+  	<dependency>
+  		<groupId>cx</groupId>
+  		<artifactId>cx-domain</artifactId>
+  		<version>${cx.version}</version>
+  	</dependency>
+  
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
