--- a/cx-common/pom.xml
+++ b/cx-common/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>cx</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <groupId>cx-common</groupId>
+  <groupId>cx</groupId>
   <artifactId>cx-common</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>cx-common</name>
